<resources>
    <string name="app_name">ATC9_SQLiteLab</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_email">Digite seu Email</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
</resources>